fix descendant cropping

--- a/src/components/_shared/RecordsTable/RecordsTablePublishing/Record/record.module.scss
+++ b/src/components/_shared/RecordsTable/RecordsTablePublishing/Record/record.module.scss
@@ -6,6 +6,7 @@
     border: none;
   }
 
+  div,
   label,
   span {
     display: inline-block;
@@ -13,6 +14,8 @@
     text-overflow: ellipsis;
     overflow: hidden;
     max-width: 100%;
+    line-height: normal;
+    margin-bottom: 0;
   }
 }
 
